--- a/dockerfile-assignment-1/Dockerfile
+++ b/dockerfile-assignment-1/Dockerfile
@@ -17,7 +17,7 @@
 # Instructions from the app developer
 # - you should use the 'node' official image, with the alpine 6.x branch
 # - this app listens on port 3000, but the container should launch on port 80
-  #  so it will respond to http://localhost:80 on your computer
+#  so it will respond to http://localhost:80 on your computer
 # - then it should use alpine package manager to install tini: 'apk add --update tini'
 # - then it should create directory /usr/src/app for app files with 'mkdir -p /usr/src/app'
 # - Node uses a "package manager", so it needs to copy in package.json file
@@ -26,7 +26,24 @@
 # - then it needs to copy in all files from current directory
 # - then it needs to start container with command '/sbin/tini -- node ./bin/www'
 # - in the end you should be using FROM, RUN, WORKDIR, COPY, EXPOSE, and CMD commands
+FROM node:14.4.0-alpine3.12
 
+RUN apk add --update tini && mkdir -p /usr/src/app 
+
+COPY package.json /
+
+RUN npm install -d && npm cache clean --force
+
+# RUN ln -sf /dev/stdout /var/log/nginx/access.log \
+# 	&& ln -sf /dev/stderr /var/log/nginx/error.log
+
+WORKDIR /usr/src/app
+
+COPY . /usr/src/app
+
+EXPOSE 3000
+
+CMD /sbin/tini -- node ./bin/www
 # Bonus Extra Credit
 # this will not have you setting up a complete image useful for local development, test, and prod
 # it's just meant to get you started with basic Dockerfile concepts and not focus too much on
