fixed old homework assignment

--- a/compose-assignment-2/docker-compose.yml
+++ b/compose-assignment-2/docker-compose.yml
@@ -18,10 +18,14 @@ services:
     database:
         image: postgres:12.1
         secrets:
-            psql_user:
-              ext: psql_pw
+         - psql_pw
         environment:
          - POSTGRES_PASSWORD_FILE=/run/secrets/psql_pw
+
+
+secrets:
+  psql_pw:
+    external: true
 
 volumes:
   drupal-modules:
